# c_greatest

./: .envrc  .gitignore  Makefile  meson.build
greatest/: greatest.c  greatest.h  meson.build
greatest-test/: greatest-test.c  greatest-test.h  meson.build
submodules/: meson.build
